--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "generator",
     "create-express-app"
   ],
+  "scripts": {
+    "docs:dev": "vitepress dev docs --host",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
+  },
   "author": "harsh vairagi",
   "license": "ISC",
   "bugs": {
@@ -25,5 +30,8 @@
   "dependencies": {
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0"
+  },
+  "devDependencies": {
+    "vitepress": "^1.3.4"
   }
 }
