--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "homepage": "https://github.com/OurCodeBase/gen3-express#readme",
   "dependencies": {
     "commander": "^12.1.0",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "signale": "^1.4.0"
   },
   "devDependencies": {
     "vitepress": "^1.3.4"
