gen3 has been published at npmjs.
- docs are updated
- changelogs are updated
- version has been updated
- added readme file to display on npmjs site

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "gen3-express",
-  "version": "1.0.0",
-  "description": "A gen3 tool to generate get started express app",
-  "main": "index.js",
+  "version": "1.1.1",
+  "description": "A gen3 tool to generate express app boilerplate.",
   "bin": {
     "gen3-express": "./bin/gen3-express.js"
   },
@@ -26,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/OurCodeBase/gen3-express/issues"
   },
-  "homepage": "https://github.com/OurCodeBase/gen3-express#readme",
+  "homepage": "https://ourcodebase.github.io/gen3-express",
   "dependencies": {
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
