--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -6,7 +6,7 @@
     "server": "nodemon app.js",
     "sync": "browser-sync start --config sync.js",
     "tailwind": "npx tailwindcss -i public/css/style.css -o public/css/tailwind.css --watch",
-    "dev": "concurrently --kill-others \"npm run server\" \"npm run sync\" \"npm run tailwind\""
+    "dev": "run-p -c -r server sync tailwind"
   },
   "dependencies": {
     "ejs": "^3.1.10",
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
-    "concurrently": "^9.0.1",
+    "npm-run-all2": "^7.0.0",
     "browser-sync": "^3.0.3",
     "tailwindcss": "^3.4.13"
   }
