--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
+    "livereload": "^0.9.3",
+    "connect-livereload": "^0.6.1",
     "npm-run-all2": "^7.0.0",
-    "browser-sync": "^3.0.3",
     "tailwindcss": "^3.4.13"
   }
 }
