--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
-    "npm-run-all2": "^7.0.0",
-    "browser-sync": "^3.0.3"
+    "livereload": "^0.9.3",
+    "connect-livereload": "^0.6.1",
+    "npm-run-all2": "^7.0.0"
   }
 }
